--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=favicon.ico><title>my-blog-master</title><link href=css/app.7654593f.css rel=preload as=style><link href=css/chunk-vendors.6b5a1b09.css rel=preload as=style><link href=js/app.8d843580.js rel=preload as=script><link href=js/chunk-vendors.958cb051.js rel=preload as=script><link href=css/chunk-vendors.6b5a1b09.css rel=stylesheet><link href=css/app.7654593f.css rel=stylesheet></head><body><noscript><strong>We're sorry but my-blog-master doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=js/chunk-vendors.958cb051.js></script><script src=js/app.8d843580.js></script></body></html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=favicon.ico><title>my-blog-master</title><style>/*声明 WebFont*/
+     @font-face {
+          font-family: 'bdsr';
+          src: url('font/bdsr.ttf') format('truetype');
+          font-weight: normal;
+          font-style: normal;
+      }
+      /*使用选择器指定字体*/
+      * {
+          font-family: 'bdsr';
+      }</style><link href=css/app.9dcb0a0d.css rel=preload as=style><link href=css/chunk-vendors.5889eb9d.css rel=preload as=style><link href=js/app.f936c5c9.js rel=preload as=script><link href=js/chunk-vendors.ac28c4a1.js rel=preload as=script><link href=css/chunk-vendors.5889eb9d.css rel=stylesheet><link href=css/app.9dcb0a0d.css rel=stylesheet></head><body><noscript><strong>We're sorry but my-blog-master doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=js/chunk-vendors.ac28c4a1.js></script><script src=js/app.f936c5c9.js></script></body></html>
